[gd_scene load_steps=5 format=2]

[ext_resource path="res://scripts/scenes/home/LobbyPanel.gd" type="Script" id=1]
[ext_resource path="res://fonts/Helvetica.ttf" type="DynamicFontData" id=2]

[sub_resource type="DynamicFont" id=1]
size = 22
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 2 )

[node name="PanelContainer" type="PanelContainer"]
margin_left = 63.1108
margin_top = 89.5294
margin_right = 353.111
margin_bottom = 554.529
script = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 7.0
margin_top = 7.0
margin_right = 283.0
margin_bottom = 458.0

[node name="TitleContainer" type="MarginContainer" parent="VBoxContainer"]
margin_right = 276.0
margin_bottom = 43.0
custom_constants/margin_top = 10
custom_constants/margin_bottom = 10

[node name="Title" type="Label" parent="VBoxContainer/TitleContainer"]
margin_top = 10.0
margin_right = 276.0
margin_bottom = 33.0
custom_fonts/font = SubResource( 1 )
text = "Lobby"
align = 1

[node name="JoinCodeContainer" type="MarginContainer" parent="VBoxContainer"]
margin_top = 47.0
margin_right = 276.0
margin_bottom = 84.0
custom_constants/margin_top = 10
custom_constants/margin_bottom = 10

[node name="JoinCode" type="Label" parent="VBoxContainer/JoinCodeContainer"]
margin_top = 10.0
margin_right = 276.0
margin_bottom = 27.0
custom_fonts/font = SubResource( 2 )
align = 1

[node name="ColorRect" type="ColorRect" parent="VBoxContainer"]
margin_top = 88.0
margin_right = 276.0
margin_bottom = 89.0
rect_min_size = Vector2( 0, 1 )

[node name="StartGameButton" type="Button" parent="VBoxContainer"]
margin_top = 93.0
margin_right = 276.0
margin_bottom = 113.0
text = "Start Game"

[node name="LeaveGameButton" type="Button" parent="VBoxContainer"]
margin_top = 117.0
margin_right = 276.0
margin_bottom = 137.0
text = "Leave Game"
